--- a/style/style.css
+++ b/style/style.css
@@ -3,21 +3,119 @@
 Reset Style
 
 */
-a{
-    text-decoration: none;
-    color: inherit;
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
 }
 
+body {
+  font-family: "Roboto";
+  line-height: 1.6;
+  font-size: 1.6rem;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+:root {
+  --orange-color: #e76f51;
+}
 /*
 
 Class Helper
 
 */
 
-
-
 /*
 
 App Style
 
 */
+
+.header {
+  background: linear-gradient(rgba(59, 55, 53, 0.5), rgba(59, 55, 53, 0.5)),
+    url(../images/header-bg.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0;
+}
+.app-logo {
+    width: 5.5rem;
+    height: 5.5rem;
+    display: block;
+}
+.app-logo__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.menu {
+  display: none;
+}
+.menu__item {
+}
+.menu__link {
+}
+.nav-menu {
+  display: none;
+}
+.mobile-menu {
+}
+.mobile-menu__item {
+}
+.mobile-menu__link {
+}
+.nav-menu__links {
+}
+.nav-menu__link {
+}
+.header__links {
+  display: none;
+}
+.header__link {
+}
+.nav__btn {
+  background-color: #fff;
+  width: 5.5rem;
+  height: 5.5rem;
+  border-radius: 1.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.nav__btn-line {
+  display: block;
+  background: var(--orange-color);
+  height: 0.3rem;
+  width: 3rem;
+  border-radius: 2rem;
+  position: relative;
+}
+.nav__btn-line::after,
+.nav__btn-line::before {
+  display: block;
+  background: var(--orange-color);
+  height: 0.3rem;
+  width: 3rem;
+  border-radius: 2rem;
+  content: "";
+  position: absolute;
+
+}
+.nav__btn-line::before{
+    top: -.8rem;
+}
+.nav__btn-line::after{
+    top: .8rem;
+}
